# ferite-modules

./: .gitignore  README
MHash/: AUTHORS  ChangeLog  Makefile.am  README  config.h.in  configure.ac
MHash/MHash/: MHash.fec  MHash.xml  Makefile.am  config.m4
MHash/test/: Makefile.am  mhash_test.fe
apache/: AUTHORS  ChangeLog  INSTALL  LICENCE  Makefile.am  README  autogen.sh  configure.ac  farm.yard
apache/apache/: Makefile.am  apache.fec  apache.xml  config.m4  multipart.c  multipart.h  util_multipart.c  util_qp.c  util_qparser.c  utility.h
apache/mod_ferite/: Makefile.am  ferite.conf  gdb  mod_ferite.c  mod_ferite.h
apache/scripts/: Makefile.am  hello_world.fe
aspell/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
aspell/aspell/: Makefile.am  aspell.fec  aspell.xml  config.m4  utility.c  utility.h
aspell/test/: Makefile.am  aspell.fe
crypt/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
crypt/crypt/: Makefile.am  base.c  base.h  config.m4  crypt.fec  crypt.xml  utility.c  utility.h
crypt/test/: Makefile.am  test.fe
curl/: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac
curl/curl/: Makefile.am  config.m4  curl.fec  curl.xml  utility.c  utility.h
curl/test/: Makefile.am  ftp.fe  headers.fe  simple-stdout.fe  simple-string.fe  uploadftp.fe  version.fe
curses/: ChangeLog  Makefile.am  README  configure.ac
curses/curses/: Makefile.am  config.m4  curses.fec  curses.xml
curses/test/: Makefile.am  getch.fe  getstr.fe  pads.fe  windows.fe
dbi/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  configure.ac
dbi/dbi/: DbiResult.fec  Makefile.am  config.m4  dbi.fec  dbi.xml  dbi_sql.fe  utility.c  utility.h
dbi/examples/: Makefile.am  ex1.fe  ex2.fe  ex3.fe
dbi/test/: dbi.fe
embfer/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  config.h.in  configure.ac  embfer-config.in  farm.yard
embfer/embfer/: Makefile.am  config.m4  embfer.fec  embfer.xml  utils.c  utils.h
embfer/libembfer/: Makefile.am  embfer.c  embfer.h
embfer/test/: Makefile.am  emb2fe.fe  foo.fsp  test.fe  test.fsp
embfer/tool/: Makefile.am  main.c
gettext/: ChangeLog  Makefile.am  README  configure.ac
gettext/gettext/: Makefile.am  config.m4  gettext.fec  gettext.xml  utility.c  utility.h
gettext/test/: Makefile.am  compile_message_catalog.sh  generate_message_catalog.sh  test.fe  test_example.po
iconv/: farm.yard
iconv/src/: iconv.fec
iconv/test/: iconv.fe
image/: AUTHORS  ChangeLog  INSTALL  LICENCE  Makefile.am  README  TODO  configure.ac  farm.yard
image/image/: Font.fec  Fontdir.fec  ImageClass.fec  Makefile.am  Polygon.fec  config.m4  image.fec  image.xml  utility.c  utility.h
image/test/: Makefile.am  test.fe
mail/: AUTHORS  ChangeLog  INSTALL  Makefile.am  configure.ac
mail/mail/: Makefile.am  Mime.fec  config.m4  imap_utility.c  imap_utility.h  mail.fec
mail/test/: sendtest.fe
ogl/: farm.yard
ogl/sample/: aaindex.fe  aapoly.fe  aargb.fe  accanti.fe  accpersp.fe  alpha.fe  alpha3D.fe  bezcurve.fe  bezmesh.fe  checker.fe  clip.fe  colormat.fe  cube.fe  depthcue.fe  dof.fe  double.fe  drawf.fe  feedback.fe  fog.fe  font-glut.fe  font.fe  hello.fe  image.fe  lines.fe  list.fe  material.fe  mipmap.fe  model.fe  movelight.fe  pickdepth.fe  plane.fe  planet.fe  pycube.fe  quadric.fe  readpixel.fe  robot.fe  select.fe  smooth.fe  stencil.fe  stroke.fe  (+9 more)
ogl/src/: GLU.fec  GLUT.fec  GLUT_utility.c  GLUT_utility.h  OpenGL.fec  OpenGL_utility.c  OpenGL_utility.h  ogl.fec  utility.h
ogl/test/: build  main.c  test.fe
serial/: ChangeLog  INSTALL  Makefile.am  README  configure.ac
serial/serial/: Makefile.am  config.m4  serial.fec  serial.xml  util.c
serial/test/: Makefile.am  test.fe
sqlite/: farm.yard  sqlite.fec  utility.c  utility.h
template/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac  farm.yard
template/template/: Makefile.am  config.m4  template.fec  template.xml  utility.c  utility.h
template/test/: Makefile.am  file.fe  file.tp  hash.fe  hash.tpl  test.fe
uxml/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
uxml/test/: data.xml  test.fe
uxml/uxml/: Makefile.am  config.m4  util_uxml.c  uxml.fec  uxml.h
xslt/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
xslt/test/: Makefile.am  test.fe  test.xml  test.xsl
xslt/xslt/: Makefile.am  config.m4  xslt.fec  xslt.xml
zip/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
zip/test/: Makefile.am  zip.fe
zip/zip/: Makefile.am  config.m4  zip.fec  zip.xml
zlib/: AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  clean.me  configure.ac
zlib/test/: zlib.fe
zlib/zlib/: Makefile.am  config.m4  utility.c  utility.h  zlib.fec
